--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "yamljs": "^0.3.0"
   },
   "dependencies": {
+    "@vssue/api-gitea-v1": "^1.4.7",
+    "@vssue/api-gitee-v5": "^1.4.7",
     "@vssue/api-github-v4": "^1.4.7",
     "@vssue/vuepress-plugin-vssue": "^1.4.8",
     "@vuepress-reco/vuepress-plugin-bgm-player": "^1.1.4",
